--- a/wit/deps.toml
+++ b/wit/deps.toml
@@ -1,1 +1,2 @@
 http = "https://github.com/WebAssembly/wasi-http/archive/v0.2.3.tar.gz"
+logging = "https://github.com/WebAssembly/wasi-logging/archive/d31c41d0d9eed81aabe02333d0025d42acf3fb75.tar.gz"
